# agent-boundary-guard

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  security.yml
docs/: SKILL_REGISTRY.md  reference-review.md  security-audit.md
scripts/: curated_secret_check.py
src/agent_boundary_guard/: __init__.py  cli.py  models.py  rules.py  sarif.py  scanner.py
tests/: test_cli.py  test_sarif.py  test_scanner.py
tests/fixtures/risky_repo/config/: agent.json
tests/fixtures/risky_repo/prompts/: system_prompt.md
tests/fixtures/safe_repo/config/: agent.json
tests/fixtures/safe_repo/prompts/: system_prompt.md
