[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-boundary-guard"
version = "0.2.0"
description = "Audit AI agent repositories for risky autonomy boundaries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Abdul Basit" }
]
keywords = ["agents", "security", "mcp", "prompt-injection", "developer-tools"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
agent-boundary-guard = "agent_boundary_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
